@@ -13,6 +13,7 @@ buildscript {
 plugins {
     id 'java'
     id 'eclipse'
+    id 'application'
     id "org.springframework.boot" version "3.3.1"
     id "io.spring.dependency-management" version "1.1.6"
 }
@@ -31,6 +32,25 @@ dependencies {
     implementation('org.projectlombok:lombok:1.18.34')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('com.h2database:h2')
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
-    testImplementation('junit:junit')
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+    }
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.10.0')
+    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.10.0')
+}
+
+application {
+    mainClassName = 'com.devkobe.Application' // 메인 클래스의 경로
+    applicationDefaultJvmArgs = [
+            "-XX:+EnableDynamicAgentLoading",
+            "-Djdk.instrument.traceUsage"
+    ]
+}
+
+test {
+    useJUnitPlatform() // JUnit 플랫폼 사용 설정
+    jvmArgs = [
+            "-XX:+EnableDynamicAgentLoading",
+            "-Djdk.instrument.traceUsage"
+    ]
 }
